# ghostguard

./: .gitignore  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
examples/policies/: default.yaml
src/ghostguard/: __init__.py  __main__.py  _types.py  cli.py  config.py
src/ghostguard/audit/: export.py  models.py  store.py
src/ghostguard/dashboard/: api.py  app.py  websocket.py
src/ghostguard/dashboard/templates/: index.html
src/ghostguard/policy/: __init__.py  anomaly.py  engine.py  loader.py  patterns.py  rules.py  schema.py
src/ghostguard/proxy/: app.py  interceptor.py  middleware.py  routes.py  upstream.py
tests/: conftest.py
tests/test_policy/: test_engine.py
tests/test_proxy/: test_interceptor.py
